[workspace]
resolver = "2"
members = ["context", "db", "runtime", "rpc"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
bladeworks-context = { path = "context" }
bladeworks-db = { path = "db" }
bladeworks-runtime = { path = "runtime" }
bladeworks-rpc = { path = "rpc" }
