[package]
edition.workspace = true
name = "bladeworks-runtime"
version.workspace = true

[dependencies]
anyhow = "1.0.86"
bladeworks-db.workspace = true

eyre = "0.6.12"
futures-util = "0.3.30"
katana-db.workspace = true
katana-tasks.workspace = true
katana-executor.workspace = true
katana-core.workspace = true
katana-primitives.workspace = true
katana-provider.workspace = true
parking_lot = "0.12.3"
tokio = { version = "1.38.0", features = ["full"] }
futures = "0.3.30"
tracing.workspace = true
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
